prod/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caring-note-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caring-note-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: caring-note-api
    spec:
      containers:
      - name: caring-note-api
        image: bsh998/caring-note-api:848a52e06f2d8cdc4bf42ab12cd69f49eb94b5b5
        imagePullPolicy: Always
        ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: caring-note-api
spec:
  selector:
    app: caring-note-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
