prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caringnote-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - caringnote.co.kr
    secretName: caringnote-tls
  rules:
  - host: caringnote.co.kr
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: caring-note-api
            port:
              number: 8080
      - path: /about
        pathType: Prefix
        backend:
          service:
            name: framer-proxy
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caring-note-web
            port:
              number: 80
